--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,13 @@
 {
   "version": 2,
   "builds": [{
-    "src": "./index.js",
+    "src": "./app.js",
     "use": "@vercel/node"
   }],
   "routes": [{"handle": "filesystem"},
     {
       "src": "/.*",
-      "dest": "index.js"
+      "dest": "app.js"
     }
   ]
 }
